<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/egame_bg"
	android:orientation="vertical">

	<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:background="@drawable/egame_top" android:orientation="horizontal">

		<ImageView android:id="@+id/back" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:background="@drawable/egame_back" />

		<TextView style="@style/egame_topTitle" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center|center_vertical" android:paddingTop="10sp"
			android:text="@string/egame_systemSetting" />
	</RelativeLayout>

	<ImageView android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="@drawable/egame_top_line" />

	<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:scrollbars="none">

		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView style="@style/egame_Text16Style" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingBottom="5dp" android:paddingLeft="10dp"
				android:text="@string/egame_notice" />

			<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:background="@drawable/egame_gray_bg"
				android:orientation="vertical">

				<LinearLayout android:layout_width="fill_parent" android:layout_height="40dp"
					android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="5dp">

					<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:layout_weight="7" android:orientation="vertical">

						<TextView style="@style/egame_listItemTextStyle" android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:text="@string/egame_newGame1" />

						<TextView style="@style/egame_black9Style" android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:text="@string/egame_newGame2" />
					</LinearLayout>

					<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:layout_gravity="center_vertical" android:layout_weight="10" android:orientation="horizontal">

						<LinearLayout android:id="@+id/llNewGameRhr" android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:orientation="horizontal" android:layout_weight="1"
							android:gravity="right">

							<TextView android:id="@+id/newGameRhr" style="@style/egame_grayTextStyle"
								android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/egame_allow"
								android:background="@drawable/egame_lvse" android:gravity="center" />
						</LinearLayout>

						<LinearLayout android:id="@+id/llNewGameJhy" android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:orientation="horizontal" android:layout_weight="1"
							android:gravity="left">

							<TextView android:id="@+id/newGameJhy" style="@style/egame_grayTextStyle"
								android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/egame_disallow"
								android:gravity="center" android:background="@drawable/egame_huiseright" />
						</LinearLayout>
					</LinearLayout>
				</LinearLayout>

				<View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@drawable/egame_line" />

				<LinearLayout android:layout_width="fill_parent" android:layout_height="40dp"
					android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="5dp">

					<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:layout_weight="7" android:orientation="vertical">

						<TextView style="@style/egame_listItemTextStyle" android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:text="@string/egame_community1" />

						<TextView style="@style/egame_black9Style" android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:text="@string/egame_community2" />
					</LinearLayout>

					<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:layout_gravity="center_vertical" android:layout_weight="10" android:orientation="horizontal">

						<LinearLayout android:id="@+id/llCommunityRhr" android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:orientation="horizontal" android:layout_weight="1"
							android:gravity="right">

							<TextView android:id="@+id/communityRhr" style="@style/egame_grayTextStyle"
								android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/egame_allow"
								android:background="@drawable/egame_lvse" android:gravity="center" />
						</LinearLayout>

						<LinearLayout android:id="@+id/llCommunityJhy" android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:orientation="horizontal" android:layout_weight="1"
							android:gravity="left">

							<TextView android:id="@+id/communityJhy" style="@style/egame_grayTextStyle"
								android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/egame_disallow"
								android:gravity="center" android:background="@drawable/egame_huiseright" />
						</LinearLayout>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>