<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/egame_bg"
	android:orientation="vertical">

	<include layout="@layout/egame_head" />

	<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">

		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView android:id="@+id/weekRank" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:background="@drawable/egame_btn_game_tab_selector" android:clickable="true"
				android:gravity="center" android:singleLine="true" android:text="@string/egame_rank_week"
				android:textColor="@drawable/egame_tv_game_tab_font_color_selector" android:textSize="14sp" />

			<TextView android:id="@+id/monthRank" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:background="@drawable/egame_btn_game_tab_selector" android:clickable="true"
				android:gravity="center" android:singleLine="true" android:text="@string/egame_rank_month"
				android:textColor="@drawable/egame_tv_game_tab_font_color_selector" android:textSize="14sp" />

			<TextView android:id="@+id/totalRank" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:background="@drawable/egame_btn_game_tab_selector" android:clickable="true"
				android:gravity="center" android:singleLine="true" android:text="@string/egame_rank_total"
				android:textColor="@drawable/egame_tv_game_tab_font_color_selector" android:textSize="14sp" />
		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:background="@drawable/egame_top_line" />
	</FrameLayout>
	<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical">
		<com.egame.app.widgets.MyListView android:id="@+id/rank"
			android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="#00000000"
			android:divider="@null" android:fadeScrollbars="true" android:fadingEdge="none"
			android:visibility="gone" />
		<LinearLayout android:id="@+id/loading" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:gravity="center" android:orientation="vertical">
			<ProgressBar android:id="@+id/loadingProgress" style="?android:attr/progressBarStyleSmallInverse"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<Button android:id="@+id/loadingButton" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:visibility="gone" android:text="@string/egame_error_reload" />
			<TextView android:id="@+id/loadingText" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:gravity="center" android:textSize="16sp" />
		</LinearLayout>
	</FrameLayout>
</LinearLayout>